Fixed whitespace on mobile

--- a/styles.css
+++ b/styles.css
@@ -11720,11 +11720,20 @@ width: 100%;
   margin-bottom: 3rem;
 }
 
-#main-section{
+#main-section {
   padding-top: 0px;
   height: 80rem;
   width: 100%;
 }
+
+/* Adjust height for screens narrower than 768px */
+@media (max-width: 950px) {
+  #main-section {
+    height: auto; /* Or set a specific smaller height */
+    min-height: 600px;
+  }
+}
+
 
 #sub-main-section{
   animation-duration: .5s;
